--- a/templates/savoirFaire.html
+++ b/templates/savoirFaire.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style/reset.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Pacifico&display=swap" rel="stylesheet">
@@ -42,90 +38,98 @@
             </nav>
         </aside>
         <section class="container">
-            <h1>mon savoir faire</h1>
-            <div>
-            <div id="accordion">
-                <div class="group">
-                  <h3>Conception initiale de projet</h3>
-                  <div>
-                    <ul>
-                        <li>Identification des besoins du client ou du projet</li>
-                        <li>Définition des objectifs et des cibles du site.</li>
-                        <li>Recherche et analyse de la concurence.</li>
-                        <li>Elaboration d'une stratégie de conception et de développement.</li>
-                    </ul>
-                  </div>
+            <div class="title">
+                <h1>mes savoir-faire</h1>
+            </div>
+            <div id="divContainer">
+                <div id="sidePhotosSection">
+                    <div><img src="../images/feutres.png" alt=""></div>
+                    <div><img src="../images/ecranWebDesign.png" alt=""></div>
+                    <div><img src="../images/clavier.png" alt=""></div>
                 </div>
-                <div class="group">
-                  <h3>planification et architecture du site</h3>
-                  <div>
-                    <ul>
-                        <li>Création de zoning, wireframes et maquettes pour la structure de site. </li>
-                        <li>Définition de l'arborescence et de la navigation du site.</li>
-                        <li>Choix des technologies et des outils à utiliser pour le développement.</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="group">
-                  <h3>Conception graphique et design</h3>
-                  <div>
-                    <ul>
-                      <li>Création de maquette graphiques (UI/UX design).</li>
-                      <li>Développement de l'identité visuelle (couleurs, typographie, logos, etc.).</li>
-                      <li>Adaptation du design pour une expérience utilisateur optimale sur différents appareils (responsive design).</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="group">
-                  <h3>développement frontend</h3>
-                  <div>
-                    <ul>
-                      <li>Intégration du design en HTML, CSS et JavaScript.</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="group">
-                    <h3>Intégration de fonctionnalités spécifiques</h3>
-                    <div>
-                      <ul>
-                        <li>Développement de fonctionnalités personnalisées (formulaires, espaces membres, e-commerce, etc.).</li>
-                        <li>Intégration de services tiers (paiement en ligne, réseaux sociaux, API, etc.)</li>
-                      </ul>
+                <div id="accordion">
+                    <div class="accordionElement active">
+                        <h3 class="accordionHeader">Conception initiale de projet</h3>
+                        <div class="accordionContent">
+                            <ul>
+                                <li>Identification des besoins du client ou du projet</li>
+                                <li>Définition des objectifs et des cibles du site.</li>
+                                <li>Recherche et analyse de la concurence.</li>
+                                <li>Elaboration d'une stratégie de conception et de développement.</li>
+                            </ul>
+                        </div>
                     </div>
-                  </div>
-                  <div class="group">
-                    <h3>Développement Back-end</h3>
-                    <div>
-                      <ul>
-                        <li>Utilisation du framework Symfony.</li>
-                        <li>Mise en place de la logique serveur.</li>
-                        <li>Gestion des bases de données.</li>
-                        <li>Implémentation de fonctionnalités dynamiques et intéractives.</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="group">
-                    <h3>Tests et débogage</h3>
-                    <div>
-                      <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="group">
-                    <h3>Déploiement</h3>
-                    <div>
+                    <div class="accordionElement">
+                    <h3 class="accordionHeader">planification et architecture du site</h3>
+                    <div class="accordionContent">
                         <ul>
-                            <li>Mise en ligne du site sur un serveur.</li>
-                            <li>Configuration du domaine et des paramètres serveur.</li>
+                            <li>Création de zoning, wireframes et maquettes pour la structure de site. </li>
+                            <li>Définition de l'arborescence et de la navigation du site.</li>
+                            <li>Choix des technologies et des outils à utiliser pour le développement.</li>
                         </ul>
                     </div>
-                  </div>
-              </div>
-            </div>
-
+                    </div>
+                    <div class="accordionElement">
+                    <h3 class="accordionHeader">Conception graphique et design</h3>
+                    <div class="accordionContent">
+                        <ul>
+                        <li>Création de maquette graphiques (UI/UX design).</li>
+                        <li>Développement de l'identité visuelle (couleurs, typographie, logos, etc.).</li>
+                        <li>Adaptation du design pour une expérience utilisateur optimale sur différents appareils (responsive design).</li>
+                        </ul>
+                    </div>
+                    </div>
+                    <div class="accordionElement">
+                    <h3 class="accordionHeader">développement frontend</h3>
+                    <div class="accordionContent">
+                        <ul>
+                        <li>Intégration du design en HTML, CSS et JavaScript.</li>
+                        </ul>
+                    </div>
+                    </div>
+                    <div class="accordionElement">
+                        <h3 class="accordionHeader">Intégration de fonctionnalités spécifiques</h3>
+                        <div class="accordionContent">
+                        <ul>
+                            <li>Développement de fonctionnalités personnalisées (formulaires, espaces membres, e-commerce, etc.).</li>
+                            <li>Intégration de services tiers (paiement en ligne, réseaux sociaux, API, etc.)</li>
+                        </ul>
+                        </div>
+                    </div>
+                    <div class="accordionElement">
+                        <h3 class="accordionHeader">Développement Back-end</h3>
+                        <div class="accordionContent">
+                        <ul>
+                            <li>Utilisation du framework Symfony.</li>
+                            <li>Mise en place de la logique serveur.</li>
+                            <li>Gestion des bases de données.</li>
+                            <li>Implémentation de fonctionnalités dynamiques et intéractives.</li>
+                        </ul>
+                        </div>
+                    </div>
+                    <div class="accordionElement">
+                        <h3 class="accordionHeader">Tests et débogage</h3>
+                        <div class="accordionContent">
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        </div>
+                    </div>
+                    <div class="accordionElement">
+                        <h3 class="accordionHeader">Déploiement</h3>
+                        <div class="accordionContent">
+                            <ul>
+                                <li>Mise en ligne du site sur un serveur.</li>
+                                <li>Configuration du domaine et des paramètres serveur.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            
+                
+            </div>    
         </section>
     </main>
     <footer>
