--- a/style/accueil.css
+++ b/style/accueil.css
@@ -1,34 +1,28 @@
 main{
     width: 100%;
-    height: 100vh;
     background: url(../images/backgroundAccueil.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 section {
     width: 100%;
-    height: 100%;
-    padding: 40px 0px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 50px 0px;
 }
 
 section #accroche {
     max-width: 600px;
     height: 35%;
     padding: 40px;
-    margin: 10%;
-    background: rgba(255, 255, 255, 0.40);
+    margin: 10% auto;
+    background: rgba(255, 255, 255, 0.50);
     border: 10px solid var(--tertiary-color);
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    
+    justify-content: space-evenly; 
     }
 
 @keyframes floatAnimation {
@@ -51,6 +45,10 @@ section #accroche {
 
 h1 {
     animation: floatAnimation 10s infinite; /* Animation continue de 2 secondes */
+    background: linear-gradient(to left, #7899D4,#700548, #E60461, #FFA54C);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* #photoProfil {
