--- a/style/savoirFaire.css
+++ b/style/savoirFaire.css
@@ -1,20 +1,80 @@
-
+main{
+    width: 100%;
+    background: url(../images/backgroundAccueil.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
 
 section{
-    width: 80%;
-    padding: 5% 0;
+    width: 100%;
+    padding-top: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 
-.container div{
-    min-width: 600px;
+section h1{
+    color: var(--tertiary-color);
 }
+#divContainer{
+    width: 100%;
+    padding-bottom:5% ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/***************************L'accordéon*******************/
+
 #accordion {
+    width: 65%;   
+    margin: 5%;
+    background: var(--tertiary-color);
 }
 
-.group {
+.accordionElement{
+    /* border: 1px solid var(--secondary-color); */
+}
+
+.accordionElement h3{
+    cursor: pointer;
+    color: var(--secondary-color);
+    background: var(--quad-color);
+    padding: 10px;
+    border: 0.5px solid grey;
 
 }
 
-.group li {
-    font-family: var(--body-font);
+.accordionContent{
+    height: 0;
+    overflow: hidden;
+    margin: 0;
+    transition: 2s height;
+}
+
+.accordionContent ul{
+    padding: 10px;
+    text-decoration: none;
+}
+
+
+/*************************Les photos sur la droite****************/
+
+#sidePhotosSection{
+    width: 100%;
+    display: flex;
+}
+#sidePhotosSection div{
+    border: var(--tertiary-color) solid 5px;
+    width: 50%;
+    margin: 1%;
+    
+}
+#sidePhotosSection div img{
+    width: 100%;
+    height: 100%;
 }
