--- a/templates/savoirFaire.html
+++ b/templates/savoirFaire.html
@@ -24,16 +24,16 @@
     <main>
         <aside class="navbar">
             <div id="menu">
-                <p>MENU</p>
-                <!-- <div class="icone"><img src="icone/Menu.png" alt="" srcset=""></div> -->
+                <p>M <br>E <br>N <br>U</p>
+                <div class="icone"><img src="icone/Menu.png" alt="" srcset=""></div>
             </div>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="../index.html">Accueil</a></li>
                     <li><a href="../templates/savoirFaire.html">Savoir faire</a></li>
-                    <li><a href="parcours.html">Parcours</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../templates/parcours.html">Parcours</a></li>
+                    <li><a href="../templates/portfolio.html">Portfolio</a></li>
+                    <li><a href="../templates/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </aside>
