--- a/style/savoirFaire.css
+++ b/style/savoirFaire.css
@@ -1,24 +1,7 @@
-main{
-    width: 100%;
-    background: url(../images/backgroundAccueil.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-section{
-    width: 100%;
-    padding-top: 2%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
 section h1{
     color: var(--tertiary-color);
 }
+
 #divContainer{
     width: 100%;
     padding-bottom:5% ;
@@ -38,6 +21,7 @@ section h1{
 
 .accordionElement{
     /* border: 1px solid var(--secondary-color); */
+    
 }
 
 .accordionElement h3{
@@ -46,7 +30,7 @@ section h1{
     background: var(--quad-color);
     padding: 10px;
     border: 0.5px solid grey;
-
+    ;
 }
 
 .accordionContent{
@@ -54,11 +38,13 @@ section h1{
     overflow: hidden;
     margin: 0;
     transition: 2s height;
+    
 }
 
 .accordionContent ul{
     padding: 10px;
     text-decoration: none;
+    
 }
 
 
